--- a/index.html
+++ b/index.html
@@ -80,5 +80,8 @@
       <li><a href="./hobbies.html"">My Hobbies </a></li>
       <li><a href="./contact.html">Contact Me</a></li>
      </ul>
+     <footer>
+      <p>© Lakshay Baskotra . All Rights Reserved  </p>
+     </footer>
 </body>
 </html>
